# FellPace

./: .gitignore  Analyse_Chase.py  CorrectZScore.py  Extract Parkrun.py  Extract_Chase.py  FellPace_tools.py  Handicap_Predictor.py  LogTransformInvestigation.ipynb  Notebook.ipynb  Notebook_for_presentation.ipynb  ZTest.ipynb  analysis_tools.py  convert_tools.py  current_meta  db_connect_add.py  html_table_parse.py  pyproject.toml  racer_repeat_check.py  regex_example.py  settings copy 2.toml  settings.toml  test_code.py
Sheffield Half Marathon/: clean.py  loadmore.py
docs/: index.html
fellpace/: FellPace_tools.py  __init__.py  __main__.py  analysis_tools.py  config.py  convert_tools.py  db_connect_add.py  entries.py  filter.py  scrape_chase.py  scraping_tools.py
fellpace/db/: db_setup.py
fellpace/extract/: chase.py  racers.py  races.py  zscores.py
fellpace/modelling/: bayesian.py  prediction.py  ransac.py  training.py
fellpace/parkrun/: scrape_parkrun.py  settings.py  settings_example.py  stats.py
fellpace/plotting/: races.py  racetimes.py
models/: coeffs.json  covars.json
notebooks/: FactSheet_generator.ipynb  Handicap_Predictor.ipynb  Notebook_for_presentation.ipynb  outlier_demo.py  race_observer.py  results-analysis.ipynb
tests/: test_categories.py
