[project]
name = "fellpace"
version = "0.0.1"
description = "A library to scrape fell race times from websites and csvs and to use the stored date to calculate likely handicaps for the Hallam Chase fell race"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "bs4>=0.0.2",
    "typer>=0.15.1",
    "scipy>=1.15.1",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.1",
    "requests>=2.32.3",
    "toml>=0.10.2",
    "levenshtein>=0.26.1",
    "pytest>=8.3.4",
    "ipython>=9.0.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "pydantic>=2.10.6",
    "lxml>=5.3.1",
    "html5lib>=1.1",
    "loguru>=0.7.3",
    "marimo>=0.14.16",
    "pyarrow>=21.0.0",
]

 [tool.setuptools] 
 packages = ["fellpace"]

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'
